add Register User

--- a/ShrimplyMVC/appsettings.json
+++ b/ShrimplyMVC/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "ShrimplyConnectionString": "server=(localdb)\\MSSQLLocalDB;database=ShrimplyMVC;trusted_connection=true"
+    "ShrimplyConnectionString": "server=(localdb)\\MSSQLLocalDB;database=ShrimplyMVC;trusted_connection=true",
+    "AuthConnectionString": "server=(localdb)\\MSSQLLocalDB;database=ShrimplyMVCAuth;trusted_connection=true"
   },
   "AllowedHosts": "*"
 }
